force-app/main/default/objects/Chat_Error_Log__c/Chat_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors for debugging and monitoring</description>
    <label>Chat Error Log</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Chat Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>