force-app/main/default/objects/Chat_Error_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Specific error code</description>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>