force-app/main/default/objects/Chat_Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error description</description>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>