force-app/main/default/objects/Chat_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Category of error</description>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>Authentication Error</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>Database Error</fullName>
            </value>
            <value>
                <fullName>AI Service Error</fullName>
            </value>
            <value>
                <fullName>Timeout Error</fullName>
            </value>
            <value>
                <fullName>Rate Limit Error</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Unknown Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>