force-app/main/default/objects/Chat_Error_Log__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>What was sent</description>
    <label>Request Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>