force-app/main/default/objects/Chat_Error_Log__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>How it was fixed</description>
    <label>Resolution Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>