force-app/main/default/objects/Chat_Error_Log__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If issue was resolved</description>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>