force-app/main/default/objects/Chat_Error_Log__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>What was received</description>
    <label>Response Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>