force-app/main/default/objects/Chat_Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Technical stack trace</description>
    <label>Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>