force-app/main/default/objects/Chat_Error_Log__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>Browser/device info</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>